[package]
name = "pathe-monitor"
version = "0.1.0"
authors = ["Joost van Someren <joost.v.someren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# datetime libraries
chrono = "0.4"
chrono-tz = "0.5"

# scheduling
clokwerk = "0.3.5"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML parser
scraper = "0.12"

# signal handler
ctrlc = { version = "3.2.0", features = ["termination"] }

# logging
log = "0.4"
fern = "0.6"
